# Studentmanager

./: .replit  LICENSE  Ouput.py  Output.py  changelog.txt  csv_operations.py  fake_data.py  gradesCalc.py  input.py  main.py  names.py  pyproject.toml  student.py  students.csv  students_updated.csv  test.py  trash.py
Prototyping/: grades_student1.csv  tempcalc.py
Prototyping/Grading System/: grades_student1.csv
Prototyping/Grading system/: grades_student1.sql  tempcalc.py
Prototyping/Ideas/: sortByClass.py
