[tool.poetry]
name = "repl-nix-studentmanager-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_studentmanager_1"}]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
